# polls-selenium

./: README.md  TODO  pyproject.toml
mysite/: settings.py  urls.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
polls/: admin.py  models.py  urls.py  views.py
polls/templates/: home.html
polls/templates/polls/: index.html  reset.html
tests/: auth.json  tests_e2e.py
