[tool.poetry]
name = "django-polls"
version = "0.1.0"
description = ""
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
selenium = "^3.141.0"
ipdb = "^0.13.7"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
